--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ ul li{
     width: 220px; 
     height: 130px;
 }
-.left-group{
+.my-list{
     height: 100%;
     width: 100%;
     margin-bottom: 0;
