设置菜单栏高度和宽度

--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ ul li{
     display: none;
     z-index: 11;
 }
-.list-group{
+.list-group .my-list{
     width: 220px; 
     height: 130px;
     margin-bottom: 0;
