--- a/src/style.css
+++ b/src/style.css
@@ -45,9 +45,9 @@ ul li{
     left: 20px;
     display: none;
     z-index: 11;
+    width: 200px;
 }
-.my-list{
-    width: 220px; 
+#my-list{
     height: 130px;
     margin-bottom: 0;
     z-index: 10;
